--- a/templates/home.html
+++ b/templates/home.html
@@ -67,7 +67,7 @@
   </div>
   <div class="slide" id="nike">
     <a
-      href="https://ShopWiseMate/coupons/nike"
+      href="https://www.nike.com/"
       aria-label="Nike Coupons and Cash Back"
       class="slide__link"
     ></a>
@@ -89,7 +89,7 @@
   </div>
   <div class="slide" id="walmart">
     <a
-      href="https://ShopWiseMate/coupons/walmart"
+      href="https://www.walmart.com/"
       aria-label="Walmart Coupons and Cash Back"
       class="slide__link"
     ></a>
@@ -111,7 +111,7 @@
   </div>
   <div class="slide" id="target">
     <a
-      href="https://ShopWiseMate/coupons/target"
+      href="https://www.target.com/"
       aria-label="Target Coupons and Cash Back"
       class="slide__link"
     ></a>
@@ -133,7 +133,7 @@
   </div>
   <div class="slide" id="vineyardvines">
     <a
-      href="https://ShopWiseMate/coupons/vineyardvines"
+      href="https://www.vineyardvines.com/"
       aria-label="Vineyard Vines Coupons and Cash Back"
       class="slide__link"
     ></a>
@@ -156,7 +156,7 @@
   </div>
   <div class="slide" id="chargebikes">
     <a
-      href="https://ShopWiseMate/coupons/chargebikes"
+      href="https://www.chargebikes.com/"
       aria-label="Charge Bikes Coupons and Cash Back"
       class="slide__link"
     ></a>
@@ -178,7 +178,7 @@
   </div>
   <div class="slide" id="uber">
     <a
-      href="https://ShopWiseMate/coupons/uber"
+      href="https://www.uber.com"
       aria-label="Uber Coupons and Cash Back"
       class="slide__link"
     ></a>
@@ -245,7 +245,7 @@
           </p>
 
           <a
-            href="https://ShopWiseMate/download"
+            href="/electronics"
             class="button size-1 hidden-xs hidden-sm"
             >Yes, Please!</a
           >
